[project]
name = "multi_tool_agent"
version = "0.1.0"
description = "An AI agent that helps product managers in creating product strategy"
authors = [
    {name = "Elnaz Babakhani", email = "eli.bkhni@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.12"
requests = "^2.31.0"
google-adk = "^1.4.2"
pydantic = "^2.11.3"
python-dotenv = "^1.1.0"
google-cloud-aiplatform = "^1.98.0"
absl-py = "^2.1.0"
cloudpickle = "^3.0.0"
litellm = "^1.72.7"

[tool.poetry.scripts]
multi_tool_agent = "multi_tool_agent:app"
deploy-local = "deployment.local:main"
deploy-remote = "deployment.remote:main"
cleanup = "deployment.cleanup:cleanup_deployment"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

 